styles.css
::selection {
  background-color: aliceblue;
}

html,
body {
  color: white;
  height: 100%;
  font-size: 16px;
  font-family: "Montserrat", Helvetica, Verdana, sans-serif;
  margin: 0;
  padding: 0;
  width: 100%;
}

a {
  color: inherit;
  text-decoration: none;
  transition: color 0.25s;
}

.background {
  background-position: 50%;
  background-size: cover;
  display: flex;
  flex-direction: column;
  height: 100%;
  opacity: 1;
  transition: opacity 0.5s;
  width: 100%;
}

.background.hide {
  opacity: 0;
}

.pre,
.post {
  flex: 1;
}

.center {
  flex-shrink: 0;
  font-size: 3em;
  line-height: normal;
  text-align: center;
  text-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
}

.time {
  font-size: 3em;
}

.time span {
  font-size: 0.75em;
  margin-left: 0.25em;
}

.link {
  bottom: 0.5em;
  box-sizing: border-box;
  cursor: pointer;
  padding: 1em;
  position: absolute;
  width: 100%;
}

.link-icon,
.link-icon-warning {
  height: auto;
  transition: opacity 0.25s;
  vertical-align: middle;
  width: 18px;
}

.link-icon.warning,
.link-icon-warning {
  display: none;
}

.link-icon,
.link-icon.warning ~ .link-icon-warning {
  display: initial;
}

.link span {
  display: inline-block;
  margin-left: 0.25em;
  max-width: 95%;
  opacity: 0;
  overflow-x: hidden;
  text-overflow: ellipsis;
  text-shadow: 0 0 0.75em rgba(0, 0, 0, 0.5);
  transition: all 0.25s;
  vertical-align: middle;
  visibility: hidden;
  white-space: nowrap;
}

.link:hover span {
  opacity: 1;
  visibility: visible;
}

